--- a/minecraft.vcxproj
+++ b/minecraft.vcxproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ClCompile Include="src/main.cpp" />
     <ClCompile Include="src/window/window.cpp" />
+    <ClCompile Include="src/gfx/colors.cpp" />
     <ClCompile Include="src/gfx/gl_utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Targets" />
