--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=119,56
 Collapsed=0
 
 [Window][Block Render Props]
-Pos=1,3
+Pos=0,1
 Size=171,82
+Collapsed=0
+
+[Window][Camera Pos]
+Pos=573,233
+Size=185,91
 Collapsed=0
 
