added chunk rendering, added exponential-squared fog

--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,13 @@ Pos=573,233
 Size=185,91
 Collapsed=0
 
+[Window][Render Data]
+Pos=17,15
+Size=151,91
+Collapsed=0
+
+[Window][Lighting]
+Pos=1652,20
+Size=225,85
+Collapsed=0
+
