--- a/minecraft.vcxproj
+++ b/minecraft.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="src/minecraft/chunk.cpp" />
     <ClCompile Include="src/minecraft/simplex1234.cpp" />
     <ClCompile Include="src/minecraft/worldgen.cpp" />
+    <ClCompile Include="src/minecraft/world_renderer.cpp" />
     <ClCompile Include="src/post/fs_quad.cpp" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
