added octree block data storage, added octree consolidation, added octree-based rendering (variable-sized cubes)

--- a/imgui.ini
+++ b/imgui.ini
@@ -24,12 +24,17 @@ Size=151,91
 Collapsed=0
 
 [Window][Lighting]
-Pos=1548,5
+Pos=1557,36
 Size=359,186
 Collapsed=1
 
 [Window][World Gen]
-Pos=1425,39
-Size=487,330
+Pos=1457,16
+Size=487,310
 Collapsed=1
+
+[Window][Render Debug]
+Pos=12,14
+Size=169,116
+Collapsed=0
 
