--- a/minecraft.vcxproj
+++ b/minecraft.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="src/imgui/imgui_impl_opengl3.cpp" />
     <ClCompile Include="src/imgui/imgui_fonts.cpp" />
     <ClCompile Include="src/lighting/deferred.cpp" />
+    <ClCompile Include="src/lighting/ssao.cpp" />
     <ClCompile Include="src/minecraft/chunk.cpp" />
     <ClCompile Include="src/minecraft/simplex1234.cpp" />
     <ClCompile Include="src/minecraft/worldgen.cpp" />
