--- a/imgui.ini
+++ b/imgui.ini
@@ -24,17 +24,17 @@ Size=151,91
 Collapsed=0
 
 [Window][Lighting]
-Pos=1546,6
-Size=359,186
-Collapsed=1
-
-[Window][World Gen]
-Pos=1427,38
-Size=487,310
+Pos=1454,23
+Size=440,271
 Collapsed=0
 
+[Window][World Gen]
+Pos=1419,-1
+Size=487,310
+Collapsed=1
+
 [Window][Render Debug]
-Pos=9,21
-Size=207,139
+Pos=7,14
+Size=250,141
 Collapsed=0
 
