--- a/imgui.ini
+++ b/imgui.ini
@@ -24,17 +24,22 @@ Size=151,91
 Collapsed=0
 
 [Window][Lighting]
-Pos=1468,332
+Pos=781,63
 Size=443,301
-Collapsed=0
+Collapsed=1
 
 [Window][World Gen]
-Pos=1409,13
-Size=487,296
-Collapsed=0
+Pos=1348,39
+Size=487,308
+Collapsed=1
 
 [Window][Render Debug]
-Pos=7,14
+Pos=7,8
 Size=250,141
 Collapsed=0
+
+[Window][Chunk Draw]
+Pos=781,5
+Size=106,200
+Collapsed=1
 
