finished XYZ mesh creation/unnecessary face culling

--- a/imgui.ini
+++ b/imgui.ini
@@ -24,22 +24,22 @@ Size=151,91
 Collapsed=0
 
 [Window][Lighting]
-Pos=781,63
-Size=443,301
-Collapsed=1
+Pos=781,15
+Size=399,269
+Collapsed=0
 
 [Window][World Gen]
-Pos=1348,39
-Size=487,308
+Pos=781,-1
+Size=360,346
 Collapsed=1
 
 [Window][Render Debug]
-Pos=7,8
-Size=250,141
+Pos=10,8
+Size=247,141
 Collapsed=0
 
 [Window][Chunk Draw]
-Pos=781,5
+Pos=781,67
 Size=106,200
 Collapsed=1
 
